# nebius-ai-benchmark-suite

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: Home.py  ui_utils.py
app/pages/: 1_Run_Benchmark.py  2_Live_Metrics.py  3_Compare_Runs.py  4_Cost_Analysis.py  5_Report_Generator.py  6_About_Nebius.py
benchmark/: __init__.py  auth.py  models.py  runner.py
benchmark/endpoint/: __init__.py  base.py  cold_start.py  concurrency.py  streaming.py  throughput.py  ttft.py  warm_start.py
benchmark/jobs/: __init__.py  completion.py  execution.py  startup.py
benchmark/metrics/: __init__.py  analyzer.py  collector.py  reporter.py
benchmark/storage/: __init__.py  database.py  orm_models.py  repository.py
config/: benchmark.yaml  models.yaml
data/: benchmark_results.db  sample_results.json
docs/: architecture.md  methodology.md  metrics.md
scripts/: create_endpoint.sh  create_job.sh  delete_endpoint.sh  delete_job.sh
templates/: report.html.jinja2
