[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nebiusbench"
version = "0.1.0"
description = "Production-grade benchmarking platform for Nebius Serverless AI Endpoints and Jobs"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "NebiusBench Contributors" }]
keywords = ["nebius", "benchmark", "llm", "inference", "streamlit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "streamlit>=1.35.0",
    "plotly>=5.21.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "aiofiles>=23.2.1",
    "tenacity>=8.3.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
nebiusbench = "benchmark.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmark*", "app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
